Added support to capture the raw message. First pass at adding support for udp testing.

--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
             <!--<scope>test</scope>-->
         <!--</dependency>-->
         <dependency>
+            <groupId>org.graylog2</groupId>
+            <artifactId>syslog4j</artifactId>
+            <version>0.9.60</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
