Removed Nullable attribute for the javax one. Moved to use SyslogMessage as the output interface for Immutables. This allows us to inherit from Message in other projects. fixes #19.

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,13 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
             <version>${netty.version}</version>
